<resources>
    <string name="app_name">Revenant Rx</string>

    // Login Ui
    <string name="title_login">Welcome Back</string>
    <string name="subtitle_login">Sign In to manage your prescriptions</string>
    <string name="label_email">Email Address</string>
    <string name="label_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logo_description">RevenantRx Logo a White cross in teal background</string>

    <!-- Register Screen -->
    <string name="title_register">Create Account</string>
    <string name="subtitle_register">Join Revenant Rx to manage your health</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_select_role">Select Role</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="divider_or">or</string>
    <string name="link_already_have_account">Already have an account? </string>
    <string name="link_log_in">Log In</string>
    <string name="content_desc_logo">Revenant Rx Logo</string>
    <string name="content_desc_toggle_password">Toggle password visibility</string>
    <string name="content_desc_role_dropdown">Select your role, dropdown menu</string>
</resources>